--- a/src/ui/common/css/style.css
+++ b/src/ui/common/css/style.css
@@ -1,1 +1,16 @@
-@font-face{font-family:mplus;src:url(../../../assets/font/mplus_hzk_12.ttf);font-display:swap}html,body{height:100%}body{font-family:mplus,Arial,Helvetica,sans-serif}#background{background:center url(../../../assets/pictures/background.png) no-repeat;background-size:100% 100%}/*# sourceMappingURL=./style.css.map */
+@font-face {
+	font-family: mplus;
+	src: url(../../../assets/font/mplus_hzk_12.ttf);
+	font-display: swap;
+}
+html,
+body {
+	height: 100%;
+}
+body {
+	font-family: mplus, Arial, Helvetica, sans-serif;
+}
+#background {
+	background: center url(../../../assets/pictures/background.png) no-repeat;
+	background-size: 100% 100%;
+} /*# sourceMappingURL=./style.css.map */
