--- a/src/ui/common/css/style.less
+++ b/src/ui/common/css/style.less
@@ -26,6 +26,7 @@ body {
 	}
 	// logo
 	.title {
+		z-index: 9999;
 		position: fixed;
 		top: 50px;
 		background: center url(../../../assets/pictures/logo-minecraft.png) no-repeat;
@@ -35,6 +36,7 @@ body {
 	}
 	// 菜单盒
 	.box {
+		z-index: 99999;
 		padding: 15px;
 		margin: 0 auto;
 		display: flex;
@@ -168,5 +170,5 @@ body {
 }
 
 .hidden {
-	display: none;
+	display: none !important;
 }
