--- a/src/ui/bag/mobile/css/style.less
+++ b/src/ui/bag/mobile/css/style.less
@@ -1,10 +1,14 @@
 @import url(../../../common/css/tool-kits.less);
 
 #bag .mobile {
+	right: 10%;
+	bottom: 10%;
 	position: fixed;
-	bottom: 20%;
-	right: 30%;
-	display: flex;
-	border: 1px solid @color-box-shadow-deep-gray;
-	border-radius: 6px;
+	width: 40px;
+	height: 40px;
+	.bag-item {
+		position: absolute;
+		left: 0;
+		top: 0;
+	}
 }
