--- a/src/ui/common/css/tool-kits.less
+++ b/src/ui/common/css/tool-kits.less
@@ -58,6 +58,14 @@
 	text-align: left;
 }
 
+.text-right {
+	text-align: right;
+}
+
 .color-white {
 	color: @color-box-highlight;
+}
+
+a {
+	color: unset;
 }
