--- a/src/ui/common/css/style.less
+++ b/src/ui/common/css/style.less
@@ -198,6 +198,18 @@ body {
 	}
 }
 
+#notify {
+	.hud-box;
+	position: fixed;
+	top: unset;
+	bottom: 20%;
+	width: auto;
+	height: auto;
+	padding: 1rem;
+	left: 50%;
+	transform: translate(-50%);
+}
+
 .covered {
 	position: absolute;
 	top: 0;
