fix: mobile support

--- a/src/ui/action/mobile/css/style.less
+++ b/src/ui/action/mobile/css/style.less
@@ -25,16 +25,20 @@
 #create-block-button,
 #jump-down-button {
 	.mobile-operate-button;
-	padding: 0.3rem;
+	padding: 0.4rem 0rem 0rem 0.3rem;
 	font-size: 1.7rem;
+	height: 2.5rem;
+	width: 2.5rem;
 	transform: translate(-66.5px, -115.18px);
 }
 
 #mobile-jump-button {
 	.mobile-operate-button;
 	.bold-border;
-	padding: 0.5rem;
+	padding: 0.85rem 0rem 0rem 0.4rem;
 	font-size: 2.5rem;
+	height: 3.7rem;
+	width: 3.7rem;
 }
 
 #create-block-button {
@@ -45,10 +49,19 @@
 	transform: translate(23.1px, -130.98px);
 }
 
-#open-bag-button {
+#open-menu-button {
 	.hud-box;
 	top: 0;
 	right: 0;
 	padding: 0.5rem;
 	position: absolute;
+}
+
+#mobile-button-wallpaper{
+	position: fixed;
+	width: calc( 150px + 6rem );
+	height: calc( 150px + 6rem );
+	right: calc( 10% - 2rem );
+	bottom: calc( 10% - 2rem );
+	border-radius: 100% 0 0 0;
 }
