--- a/src/ui/bag/mobile/css/style.less
+++ b/src/ui/bag/mobile/css/style.less
@@ -1,11 +1,9 @@
 @import url(../../../common/css/tool-kits.less);
 
 #bag .mobile {
-	right: 10%;
-	bottom: 10%;
+	right: calc( 10% + 40px);
+	bottom: calc( 10% + 40px);
 	position: fixed;
-	width: 40px;
-	height: 40px;
 	.bag-item {
 		position: absolute;
 		left: 0;
