fix: load logic

--- a/src/ui/common/css/style.less
+++ b/src/ui/common/css/style.less
@@ -35,7 +35,7 @@ body {
 	#title {
 		position: fixed;
 		top: 50px;
-		background: center url(../../../assets/pictures/logo-minecraft.png) no-repeat;
+		background: center url(../../../assets/pictures/logo-minecraft.svg) no-repeat;
 		height: 150px;
 		width: 100%;
 		background-size: 560px auto;
