feat: vr button

--- a/src/ui/common/css/style.less
+++ b/src/ui/common/css/style.less
@@ -19,7 +19,7 @@ body {
 	overflow-y: hidden;
 	// 开局背景图
 	&.background-image {
-		background: center url(../../../assets/pictures/background.png) no-repeat;
+		background: center url(../../../assets/pictures/background.jpg) no-repeat;
 		background-size: 100% 100%;
 	}
 	// 开局后菜单的纯色背景
@@ -312,4 +312,8 @@ body {
 	animation: icon-animate 1.33s ease-in-out infinite;
 	display: inline-block;
 	color: #e25555;
+}
+
+#VRButton{
+	display: none;
 }
