fix: advanced collision check

--- a/src/ui/common/css/style.less
+++ b/src/ui/common/css/style.less
@@ -191,7 +191,6 @@ body {
 	}
 }
 
-// elements
 #help {
 	li {
 		list-style-type: none;
@@ -201,6 +200,7 @@ body {
 	}
 }
 
+// 通知
 #notify {
 	.hud-box;
 	position: fixed;
@@ -287,6 +287,7 @@ body {
 	}
 }
 
+// 心跳
 @keyframes icon-animate {
 	0%,
 	100% {
@@ -314,6 +315,7 @@ body {
 	color: #e25555;
 }
 
+// 隐藏VR按键
 #VRButton {
 	display: none;
 }
