feat: PWA support

--- a/src/ui/common/css/style.less
+++ b/src/ui/common/css/style.less
@@ -19,7 +19,7 @@ body {
 	overflow-y: hidden;
 	// 开局背景图
 	&.background-image {
-		background: center url(../../../assets/pictures/background.jpg) no-repeat;
+		background: center url(/pictures/background.jpg) no-repeat;
 		background-size: 100% 100%;
 	}
 	// 开局后菜单的纯色背景
@@ -35,7 +35,7 @@ body {
 	#title {
 		position: fixed;
 		top: 50px;
-		background: center url(../../../assets/pictures/logo-minecraft.svg) no-repeat;
+		background: center url(/pictures/logo-minecraft.svg) no-repeat;
 		height: 150px;
 		width: 100%;
 		background-size: 560px auto;
@@ -84,14 +84,14 @@ body {
 		.box-item;
 		.box-item-block;
 		text-align: center;
-		background: url(../../../assets/pictures/button-wallpaper.png);
+		background: url(/pictures/button-wallpaper.png);
 	}
 	// 下拉框
 	.select {
 		.box-item;
 		.box-item-block;
 		padding: 1px 4px;
-		background: url(../../../assets/pictures/button-wallpaper.png);
+		background: url(/pictures/button-wallpaper.png);
 		option {
 			background: @color-btn-gray;
 		}
@@ -175,7 +175,7 @@ body {
 				box-shadow: @box-shadow;
 				border: 2px #000 solid;
 				-webkit-appearance: none;
-				background: url(../../../assets/pictures/button-wallpaper.png);
+				background: url(/pictures/button-wallpaper.png);
 				&:active {
 					box-shadow: @box-shadow-reverse;
 				}
