--- a/src/ui/crosshair/css/style.less
+++ b/src/ui/crosshair/css/style.less
@@ -5,7 +5,7 @@
 	height: 37px;
 	position: fixed;
 	transform: translate(-50%, -50%);
-	background: no-repeat url(../../../assets/pictures/plus_icon.png) 100%/100%;
+	background: no-repeat url(/pictures/plus_icon.png) 100%/100%;
 	background-position: top;
 
 	&.dark {
