--- a/src/ui/bag/css/style.less
+++ b/src/ui/bag/css/style.less
@@ -5,7 +5,7 @@
 	width: 40px;
 	height: 40px;
 	&.active {
-		border-image-source: url(../../../assets/pictures/hud-box-border-active.png);
+		border-image-source: url(/pictures/hud-box-border-active.png);
 	}
 	.bag-item-image {
 		position: relative;
