feat: PWA support

--- a/src/ui/common/css/tool-kits.less
+++ b/src/ui/common/css/tool-kits.less
@@ -12,7 +12,7 @@
 
 @font-face {
 	font-family: mplus;
-	src: url(font/mplus_hzk_12.ttf);
+	src: url(/font/mplus_hzk_12.ttf);
 	font-display: swap;
 }
 
