--- a/src/ui/action/mobile/css/style.less
+++ b/src/ui/action/mobile/css/style.less
@@ -16,7 +16,7 @@
 	transform: translate(0);
 	outline: none;
 	&.active {
-		border-image-source: url(..//pictures/hud-box-border-active.png);
+		border-image-source: url(../../../../assets/pictures/hud-box-border-active.png);
 	}
 }
 
