--- a/src/ui/bag/bagbox/css/style.less
+++ b/src/ui/bag/bagbox/css/style.less
@@ -31,7 +31,7 @@
 				display: flex;
 			}
 			.bag-item:hover {
-				border-image-source: url(..//pictures/hud-box-border-active.png);
+				border-image-source: url(../../../../assets/pictures/hud-box-border-active.png);
 			}
 		}
 		.title {
