--- a/src/ui/common/css/tool-kits.less
+++ b/src/ui/common/css/tool-kits.less
@@ -12,7 +12,7 @@
 
 @font-face {
 	font-family: mplus;
-	src: url(/font/mplus_hzk_12.ttf);
+	src: url(../../../assets/font/mplus_hzk_12.ttf);
 	font-display: swap;
 }
 
@@ -46,8 +46,8 @@
 	color: @color-box-highlight;
 	background-clip: padding-box;
 	border: 3px solid transparent;
-	background: url(/pictures/hud-box-background.png);
-	border-image: url('/pictures/hud-box-border.png') 3;
+	background: url(../../../assets/pictures/hud-box-background.png);
+	border-image: url('../../../assets/pictures/hud-box-border.png') 3;
 	box-shadow: inset 2px 2px @color-background-semi-trans-grey, inset -1px -1px @color-box-shadow-semi-trans-deep-gray;
 	&.bold-border {
 		border-width: 6px;
